// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Artifactory connector Wizard Should be able to edit connector 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-artifactory"
        >
          <svg
            height="45"
            viewBox="0 0 12 14"
            width="45"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="#619d42"
            >
              <path
                d="M.6 5.4C.6 2.6 3 .1 5.9.1c2.8 0 5.3 2.2 5.3 5.4 0 2.9-2.4 5.3-5.4 5.3-3-.1-5.3-2.6-5.2-5.4zm9.7.1C10.3 3.1 8.4 1 5.9 1S1.5 3 1.5 5.4c0 2.5 2 4.4 4.4 4.4 2.4.1 4.4-1.9 4.4-4.3zM6 13h5c.2 0 .2 0 .2.2v.5c0 .1-.1.2-.2.2H.9c-.3 0-.3 0-.3-.2v-.5c.1-.2.1-.2.3-.2H4z"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.artifactory
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical StyledProps--main StyledProps--margin-small"
        style="height: inherit;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
        >
          details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main secondStep StyledProps--padding-top-large StyledProps--padding-bottom-large"
              >
                <div
                  class="StyledProps--font StyledProps--main formRow"
                >
                  <div
                    class="bp3-form-group urlInput"
                    data-id="artifactoryServerUrl-0"
                  >
                    <label
                      class="bp3-label"
                      for="artifactoryServerUrl"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="stepArtifactoryAuthForm_artifactoryServerUrl"
                      >
                        connectors.artifactory.artifactoryServerUrl
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="artifactoryServerUrl"
                          placeholder="UrlLabel"
                          type="text"
                          value="dummyRespositoryUrl"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main authHeaderRow"
                >
                  <span
                    class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
                  >
                    authentication
                  </span>
                  <div
                    class="bp3-form-group authTypeSelectLarge"
                    data-id="authType-1"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="authType"
                              placeholder="- Select -"
                              style="padding-right: 0px;"
                              type="text"
                              value="usernamePassword"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main formWrapper"
                >
                  <div
                    class="bp3-form-group"
                    data-id="usernamefieldType-2"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--vertical StyledProps--main"
                      >
                        <div
                          class="label"
                        >
                          <label>
                            username
                          </label>
                          <div
                            class="bp3-form-group labelSelect"
                            data-id="usernamefieldType-3"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-popover-wrapper Select--main bp3-fill"
                              >
                                <div
                                  class="bp3-popover-target"
                                >
                                  <div
                                    class="bp3-input-group"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="usernamefieldType"
                                      placeholder="- Select -"
                                      style="padding-right: 0px;"
                                      type="text"
                                      value="plaintext"
                                    />
                                    <span
                                      class="bp3-input-action"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                        icon="chevron-down"
                                      >
                                        <svg
                                          data-icon="chevron-down"
                                          height="14"
                                          viewBox="0 0 16 16"
                                          width="14"
                                        >
                                          <desc>
                                            chevron-down
                                          </desc>
                                          <path
                                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-form-group textCss"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="usernametextField"
                                type="text"
                                value="dev"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="null-5"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--vertical StyledProps--main"
                      >
                        <label
                          class="bp3-label"
                        >
                          password
                        </label>
                        <div
                          class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                        >
                          <a
                            class="containerLink"
                            data-testid="password"
                            href="/account/dummy/resources/connectors"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="key-main"
                              style="height: 12px;"
                            >
                              <svg
                                height="24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  fill="none"
                                  stroke="#1C1C28"
                                  stroke-width="0.5"
                                >
                                  <path
                                    d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                  />
                                  <path
                                    d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                  />
                                </g>
                              </svg>
                            </span>
                            <p
                              class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                            >
                              <div>
                                secret.configureSecret
                              </div>
                              <div>
                                &lt;connectorPass&gt;
                              </div>
                            </p>
                          </a>
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main containerEditBtn Button--with-current-color Button--without-shadow"
                            data-testid="password-edit"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--color StyledProps--color-primary7"
                                icon="edit"
                              >
                                <svg
                                  data-icon="edit"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <desc>
                                    edit
                                  </desc>
                                  <path
                                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-small"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
                  data-name="artifactoryBackButton"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Artifactory connector Wizard Should render form 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-artifactory"
        >
          <svg
            height="45"
            viewBox="0 0 12 14"
            width="45"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="#619d42"
            >
              <path
                d="M.6 5.4C.6 2.6 3 .1 5.9.1c2.8 0 5.3 2.2 5.3 5.4 0 2.9-2.4 5.3-5.4 5.3-3-.1-5.3-2.6-5.2-5.4zm9.7.1C10.3 3.1 8.4 1 5.9 1S1.5 3 1.5 5.4c0 2.5 2 4.4 4.4 4.4 2.4.1 4.4-1.9 4.4-4.3zM6 13h5c.2 0 .2 0 .2.2v.5c0 .1-.1.2-.2.2H.9c-.3 0-.3 0-.3-.2v-.5c.1-.2.1-.2.3-.2H4z"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.artifactory
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                dummy_name
                              </span>
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormArtifactory_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value="dummy name"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="description-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="tags-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Artifactory connector Wizard Should render form 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-artifactory"
        >
          <svg
            height="45"
            viewBox="0 0 12 14"
            width="45"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="#619d42"
            >
              <path
                d="M.6 5.4C.6 2.6 3 .1 5.9.1c2.8 0 5.3 2.2 5.3 5.4 0 2.9-2.4 5.3-5.4 5.3-3-.1-5.3-2.6-5.2-5.4zm9.7.1C10.3 3.1 8.4 1 5.9 1S1.5 3 1.5 5.4c0 2.5 2 4.4 4.4 4.4 2.4.1 4.4-1.9 4.4-4.3zM6 13h5c.2 0 .2 0 .2.2v.5c0 .1-.1.2-.2.2H.9c-.3 0-.3 0-.3-.2v-.5c.1-.2.1-.2.3-.2H4z"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.artifactory
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical StyledProps--main StyledProps--margin-small"
        style="height: inherit;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
        >
          details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main secondStep StyledProps--padding-top-large StyledProps--padding-bottom-large"
              >
                <div
                  class="StyledProps--font StyledProps--main formRow"
                >
                  <div
                    class="bp3-form-group bp3-intent-danger urlInput"
                    data-id="artifactoryServerUrl-0"
                  >
                    <label
                      class="bp3-label"
                      for="artifactoryServerUrl"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="stepArtifactoryAuthForm_artifactoryServerUrl"
                      >
                        connectors.artifactory.artifactoryServerUrl
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group bp3-intent-danger"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="artifactoryServerUrl"
                          placeholder="UrlLabel"
                          type="text"
                          value=""
                        />
                      </div>
                      <div
                        class="bp3-form-helper-text"
                      >
                        <div
                          class="FormError--errorDiv"
                        >
                          <span
                            class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                            data-icon="circle-cross"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 13 13"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="FormError--error"
                          >
                            validation.artifactoryServerURL
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main authHeaderRow"
                >
                  <span
                    class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
                  >
                    authentication
                  </span>
                  <div
                    class="bp3-form-group authTypeSelectLarge"
                    data-id="authType-1"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="authType"
                              placeholder="- Select -"
                              style="padding-right: 0px;"
                              type="text"
                              value="usernamePassword"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main formWrapper"
                >
                  <div
                    class="bp3-form-group bp3-intent-danger"
                    data-id="usernamefieldType-2"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--vertical StyledProps--main"
                      >
                        <div
                          class="label"
                        >
                          <label>
                            username
                          </label>
                          <div
                            class="bp3-form-group labelSelect"
                            data-id="usernamefieldType-3"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-popover-wrapper Select--main bp3-fill"
                              >
                                <div
                                  class="bp3-popover-target"
                                >
                                  <div
                                    class="bp3-input-group"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="usernamefieldType"
                                      placeholder="- Select -"
                                      style="padding-right: 0px;"
                                      type="text"
                                      value="plaintext"
                                    />
                                    <span
                                      class="bp3-input-action"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                        icon="chevron-down"
                                      >
                                        <svg
                                          data-icon="chevron-down"
                                          height="14"
                                          viewBox="0 0 16 16"
                                          width="14"
                                        >
                                          <desc>
                                            chevron-down
                                          </desc>
                                          <path
                                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-form-group textCss"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="usernametextField"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-helper-text"
                      >
                        validation.username
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group bp3-intent-danger"
                    data-id="null-5"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--vertical StyledProps--main"
                      >
                        <label
                          class="bp3-label"
                        >
                          password
                        </label>
                        <div
                          class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                        >
                          <a
                            class="containerLink"
                            data-testid="password"
                            href="/account/dummy/resources/connectors"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="key-main"
                              style="height: 12px;"
                            >
                              <svg
                                height="24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  fill="none"
                                  stroke="#1C1C28"
                                  stroke-width="0.5"
                                >
                                  <path
                                    d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                  />
                                  <path
                                    d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                  />
                                </g>
                              </svg>
                            </span>
                            <p
                              class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                            >
                              <div>
                                createOrSelectSecret
                              </div>
                            </p>
                          </a>
                        </div>
                      </div>
                      <div
                        class="bp3-form-helper-text"
                      >
                        validation.password
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-small"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
                  data-name="artifactoryBackButton"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
